<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_kependudukan"
            android:icon="@drawable/ic_kependudukan"
            android:title="@string/menu_kependudukan" />
        <item
            android:id="@+id/nav_kemiskinan"
            android:icon="@drawable/misk"
            android:title="@string/menu_kemiskinan" />
        <item
            android:id="@+id/nav_ipm"
            android:icon="@drawable/ic_ipm"
            android:title="@string/menu_IPM" />
        <item
            android:id="@+id/nav_ketenagakerjaan"
            android:icon="@drawable/ic_ketengakerjaan"
            android:title="@string/menu_Ketenagakerjaan" />
        <item
            android:id="@+id/nav_perekonimian"
            android:icon="@drawable/ic_perekonomian"
            android:title="@string/menu_perekonomian" />
        <item
            android:id="@+id/nav_kesejahteraan"
            android:icon="@drawable/ic_kesejahteraan"
            android:title="@string/menu_kesejahteraan" />
        <item
            android:id="@+id/nav_tentang"
            android:icon="@drawable/ic_tentang"
            android:title="@string/menu_tentang" />
    </group>
</menu>